# misis2024s-23-01-gabdrakhmanov-z-i

./: .gitignore  CMakeLists.txt  codeforces.id  reports.md  status.md
prj.app/: CMakeLists.txt  app.cpp  timer_output.txt
prj.app/robobuba/: CMakeLists.txt  inputFile.txt  robobuba.cpp
prj.codeforces/: 0000a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp  readme.md
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stackarr/: stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklist/: CMakeLists.txt  stacklist.cpp  stacklist.hpp
prj.lab/stacklst/: stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  binary  binary_bilikto  bitset.txt  test_bitset.cpp  test_bitset_txt.cpp  test_dynarr.cpp  test_queue_arr.cpp  test_queue_lst_pr.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstt.cpp  test_stack.cpp  test_stack_list.cpp  test_stackarrt.cpp  test_stacklstt.cpp
